# bikedash

./: CLAUDE.md  CURRENTPROMPT.txt  DASHBOARD.md  PROJECT_MANUAL.md  README.md  main.py
.claude/: settings.local.json
dash/: main.py
ecu/: config_layer.py  main.py
ecu_v2/: ARCHITECTURE.md  CMakeLists.txt
ecu_v2/c_core/: advance_map.c  advance_map.h  crank.c  crank.h  crank_capture.pio  ecu_core.c  ecu_core.h  ecu_types.h  faults.c  faults.h  ignition.c  ignition.h  ipc.c  ipc.h  safety.c  safety.h  scheduler.c  scheduler.h
ecu_v2/micropython/: config_layer.py  ecu_native.c  main.py  micropython.cmake
hardware/kicad/: README_IMPORT.md  bike_dashboard_bom.csv  bike_dashboard_nets.csv  bike_dashboard_placement.csv  bike_dashboard_spec.md
